--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "eslint-plugin-vue": "^6.2.2",
     "lint-staged": "^9.5.0",
     "prettier": "^2.2.1",
+    "sass": "^1.42.1",
+    "sass-loader": "~10.2.0",
     "typescript": "~4.1.5",
     "vue-template-compiler": "^2.6.11"
   },
